   (if SplashScreenDir is a relative path, Spring's CWD will be prepended)
 - Add FPSClampPos config for whether the engine should verify the camera doesn't hit ground/go too far
   this and other FPS camera configs can be changed midgame and will affect the next frame drawn.
 - Add OverheadMaxHeightFactor config - a float multiplier for maximum overhead camera height.
 - show warning if VMware Mesa drivers are installed
 - avoid "Invalid thread number 0" if window creation fails
 - rename the 'minimised' CLI flag to 'hidden'
 - prevent window from being considered unresponsive during startup
 - make shift+esc drop to LuaMenu from PreGame
 ! fix window-state restoration
   the WindowState config-setting is gone, a maximized
   non-fullscreen window now gets restored by checking
   if the resolution previously written is maximal (for
   minimized windows the state is not saved, as before)
 - fix VRAM size detection
 - coax more information out of systems that fail OpenGL context-creation
 - add fallbacks for common context-creation failures; catch inadequate
   desktop video-modes; turn exceptions during {window,context}-creation
   into friendlier popups
 - downgrade from throwing exception to warning for missing scar-textures
 - extend and organize the information shown in /debug
 ! rename '/roam' to '/mapmeshdrawer' which cycles through the renderers
 - add '/debugglerrors' command (enables per-frame glGetError reporting)
 - add '/debuggl x y z' command (requires DebugGL=1) where x=source,y=type,z=severity
 - add '/wire{model,sky,tree,water}' debug commands

Bugfixes:
 - fix LuaParser thread-safety
 - fix ProfileDrawer thread-safety
 - fix ScopedMtTimer thread-safety
 - fix LosMap thread-safety
 - fix PathTexture thread-safety
 - fix race-condition between screenshot counter and libIL
 - fix sound-thread occasionally accessing a deleted pointer on exit
 - fix double-free in CBitmap's move-ctor for DDS images